--- a/windows.ui
+++ b/windows.ui
@@ -56,8 +56,8 @@
      <widget class="QPushButton" name="pushButton_files_add">
       <property name="geometry">
        <rect>
-        <x>400</x>
-        <y>110</y>
+        <x>130</x>
+        <y>310</y>
         <width>31</width>
         <height>31</height>
        </rect>
@@ -69,8 +69,8 @@
      <widget class="QPushButton" name="pushButton_files_del_one">
       <property name="geometry">
        <rect>
-        <x>400</x>
-        <y>170</y>
+        <x>230</x>
+        <y>310</y>
         <width>31</width>
         <height>31</height>
        </rect>
@@ -98,8 +98,34 @@
         <x>10</x>
         <y>20</y>
         <width>381</width>
-        <height>321</height>
+        <height>281</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_files_up">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>120</y>
+        <width>31</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>up</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_files_down">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>170</y>
+        <width>31</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>down</string>
       </property>
      </widget>
     </widget>
@@ -166,8 +192,8 @@
      <widget class="QPushButton" name="pushButton_files_sub_del_one">
       <property name="geometry">
        <rect>
-        <x>400</x>
-        <y>100</y>
+        <x>240</x>
+        <y>310</y>
         <width>31</width>
         <height>31</height>
        </rect>
@@ -192,8 +218,8 @@
      <widget class="QPushButton" name="pushButton_files_sub_add">
       <property name="geometry">
        <rect>
-        <x>400</x>
-        <y>40</y>
+        <x>120</x>
+        <y>310</y>
         <width>31</width>
         <height>31</height>
        </rect>
@@ -206,7 +232,7 @@
       <property name="geometry">
        <rect>
         <x>400</x>
-        <y>170</y>
+        <y>150</y>
         <width>31</width>
         <height>31</height>
        </rect>
@@ -221,8 +247,34 @@
         <x>10</x>
         <y>20</y>
         <width>381</width>
-        <height>321</height>
+        <height>281</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_files_sub_up">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>100</y>
+        <width>31</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>up</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_files_sub_down">
+      <property name="geometry">
+       <rect>
+        <x>400</x>
+        <y>200</y>
+        <width>31</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>down</string>
       </property>
      </widget>
     </widget>
